dropshot/tests/fail/bad_trait_only14.stderr
error: expected `;`, found `#`
  --> tests/fail/bad_trait_only14.rs:15:17
   |
15 |     type Context
   |                 ^ help: add `;` here
16 |
17 |     #[endpoint {
   |     - unexpected token

error: expected `;`
  --> tests/fail/bad_trait_only14.rs:17:5
   |
17 |     #[endpoint {
   |     ^

error[E0405]: cannot find trait `MyApi` in this scope
  --> tests/fail/bad_trait_only14.rs:29:6
   |
29 | impl MyApi for MyImpl {
   |      ^^^^^ not found in this scope

error[E0433]: failed to resolve: use of undeclared crate or module `my_api`
  --> tests/fail/bad_trait_only14.rs:42:5
   |
42 |     my_api::foo();
   |     ^^^^^^ use of undeclared crate or module `my_api`
